--- a/myFavorite/package.json
+++ b/myFavorite/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "manage-system",
-  "version": "2.1.0",
-  "description": "基于Vue.js 2.x系列 + element-ui 内容管理系统解决方案",
-  "author": "lin-xin <2981207131@qq.com>",
+  "name": "meeting-system",
+  "version": "1.0.0",
+  "description": "Vue.js 2.x系列 + element-ui +WebRTC video component解决方案",
+  "author": "huge0128",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
@@ -17,7 +17,11 @@
     "babel-polyfill": "^6.23.0",
     "element-ui": "1.3.1",
     "file-saver": "^1.3.3",
+    "fs": "0.0.1-security",
     "jquery": "^1.4.1",
+    "plugin": "^0.3.3",
+    "simple-signal-client": "^3.0.0",
+    "socket.io-client": "^4.4.0",
     "vue": "^2.3.2",
     "vue-barcode": "^1.1.0",
     "vue-core-image-upload": "2.1.11",
